@@ -5,6 +5,7 @@ Requires
 New features
 ~~~~~~~~~~~~
 - #2308: refactored generation of attached files and images URIs
+- #851: indirect widget for flexible doc use-cases
 - #2310: ZCML registration for widgets and field classes
 Bug fixes
 ~~~~~~~~~
